Fixing wrong translation in button Add line of My Timesheet

--- a/addons/hr_timesheet_sheet/i18n/de.po
+++ b/addons/hr_timesheet_sheet/i18n/de.po
@@ -79,7 +79,7 @@ msgstr "Hinzufügen"
 #: code:addons/hr_timesheet_sheet/static/src/xml/timesheet.xml:39
 #, python-format
 msgid "Add a Line"
-msgstr "EIntrag hinzufügen"
+msgstr "Eintrag hinzufügen"
 
 #. module: hr_timesheet_sheet
 #: field:hr.config.settings,timesheet_max_difference:0
